--- a/LicentaApp/Web.config
+++ b/LicentaApp/Web.config
@@ -5,11 +5,10 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <section name="oracle.manageddataaccess.client" type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess, Version=4.122.1.0, Culture=neutral, PublicKeyToken=89b483f429c47342" />
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  </configSections>
+    <!--<section name="oracle.manageddataaccess.client" type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess, Version=4.122.1.0, Culture=neutral, PublicKeyToken=89b483f429c47342" />-->
+    
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -75,11 +74,11 @@
       </parameters>
     </defaultConnectionFactory>
     <providers>
-      <provider invariantName="Oracle.ManagedDataAccess.Client" type="Oracle.ManagedDataAccess.EntityFramework.EFOracleProviderServices, Oracle.ManagedDataAccess.EntityFramework, Version=6.122.1.0, Culture=neutral, PublicKeyToken=89b483f429c47342" />
+      <!--<provider invariantName="Oracle.ManagedDataAccess.Client" type="Oracle.ManagedDataAccess.EntityFramework.EFOracleProviderServices, Oracle.ManagedDataAccess.EntityFramework, Version=6.122.1.0, Culture=neutral, PublicKeyToken=89b483f429c47342" />-->
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <system.data>
+  <!--<system.data>
     <DbProviderFactories>
       <remove invariant="Oracle.ManagedDataAccess.Client" />
       <add name="ODP.NET, Managed Driver" invariant="Oracle.ManagedDataAccess.Client" description="Oracle Data Provider for .NET, Managed Driver" type="Oracle.ManagedDataAccess.Client.OracleClientFactory, Oracle.ManagedDataAccess, Version=4.122.1.0, Culture=neutral, PublicKeyToken=89b483f429c47342" />
@@ -91,9 +90,11 @@
         <dataSource alias="OracleDataSource" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=37.120.250.20)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=oracle))) " />
       </dataSources>
     </version>
-  </oracle.manageddataaccess.client>
+  </oracle.manageddataaccess.client>-->
   <connectionStrings>
     <!--<add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=oracle_user;Password=oracle_user_password;Data Source=oracle" />-->
-    <add name="LicentaDbContext" connectionString="metadata=res://*/LicentaDbContext.csdl|res://*/LicentaDbContext.ssdl|res://*/LicentaDbContext.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=OracleDB;PASSWORD=addictedd24;USER ID=STROET&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    <!--<add name="LicentaDbContext" connectionString="metadata=res://*/LicentaDbContext.csdl|res://*/LicentaDbContext.ssdl|res://*/LicentaDbContext.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=OracleDB;PASSWORD=addictedd24;USER ID=STROET&quot;" providerName="System.Data.EntityClient" />-->
+    <!--<add name="LicentaDbContext" connectionString="Data Source=localhost;Initial Catalog=LicentaTeo;Persist Security Info=True;User ID=sa;Password=suvoda01!" providerName="System.Data.SqlClient" />-->
+
+  <add name="LicentaDbContext" connectionString="metadata=res://*/LicentaDbContext.csdl|res://*/LicentaDbContext.ssdl|res://*/LicentaDbContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=LicentaTeo;user id=sa;password=suvoda01!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
