--- a/LicentaApp/Web.config
+++ b/LicentaApp/Web.config
@@ -96,5 +96,9 @@
     <!--<add name="LicentaDbContext" connectionString="metadata=res://*/LicentaDbContext.csdl|res://*/LicentaDbContext.ssdl|res://*/LicentaDbContext.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=OracleDB;PASSWORD=addictedd24;USER ID=STROET&quot;" providerName="System.Data.EntityClient" />-->
     <!--<add name="LicentaDbContext" connectionString="Data Source=localhost;Initial Catalog=LicentaTeo;Persist Security Info=True;User ID=sa;Password=suvoda01!" providerName="System.Data.SqlClient" />-->
 
-  <add name="LicentaDbContext" connectionString="metadata=res://*/LicentaDbContext.csdl|res://*/LicentaDbContext.ssdl|res://*/LicentaDbContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=LicentaTeo;user id=sa;password=suvoda01!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <!--<add name="LicentaDbContext" connectionString="metadata=res://*/LicentaDbContext.csdl|res://*/LicentaDbContext.ssdl|res://*/LicentaDbContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=LicentaTeo;user id=sa;password=suvoda01!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <!--<add name="LicentaDbContext" connectionString="Data Source=TEO-PC\LOCALHOST;Initial Catalog=LicentaTeoStroe;Persist Security Info=True;User ID=sa;Password=teodora01!" providerName="System.Data.SqlClient" />-->
+    <add name="LicentaDbContext" connectionString="metadata=res://*/LicentaDbContext.csdl|res://*/LicentaDbContext.ssdl|res://*/LicentaDbContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=TEO-PC\LOCALHOST;initial catalog=LicentaTeoStroe;user id=sa;password=teodora01!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+
+  </connectionStrings>
 </configuration>
