--- a/LicentaApp/Web.config
+++ b/LicentaApp/Web.config
@@ -16,6 +16,23 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <authentication mode="Forms">
+      <forms loginUrl="Account/Login"></forms>
+    </authentication>
+    <membership defaultProvider="AppMembershipProvider">
+      <providers>
+        <clear/>
+        <add name="AppMembershipProvider"
+             type="LicentaApp.Domain.Auth.AppMembershipProvider"/>
+      </providers>
+    </membership>
+    <roleManager defaultProvider="AppRoleProvider" enabled="true">
+      <providers>
+        <clear/>
+        <add name="AppRoleProvider" type="LicentaApp.Domain.Auth.AppRoleProvider" />
+      </providers>
+    </roleManager>
+    
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <httpModules>
